--- a/index.html
+++ b/index.html
@@ -5,3 +5,5 @@
 
 <input type="submit" id="stop" value="stop" style="display:none;">
 <input type="submit" id="next" value="next" style="display:none;">
+
+<div id="log" style="white-space: pre; font-family: monospace;"></div>
