keep working on triangle

--- a/index.html
+++ b/index.html
@@ -6,4 +6,14 @@
 <input type="submit" id="stop" value="stop" style="display:none;">
 <input type="submit" id="next" value="next" style="display:none;">
 
+<div>
+  <input type="checkbox" id="pulse1_enabled" checked> Pulse 1: <span id="pulse1"></span>
+  <br>
+  <input type="checkbox" id="pulse2_enabled" checked> Pulse 2: <span id="pulse2"></span>
+  <br>
+  <input type="checkbox" id="triangle_enabled" checked> Triangle: <span id="triangle"></span>
+  <br>
+  <input type="checkbox" id="noise_enabled" checked> Noise: <span id="noise"></span>
+</div>
+
 <div id="log" style="white-space: pre; font-family: monospace;"></div>
