--- a/index.html
+++ b/index.html
@@ -16,4 +16,5 @@
   <input type="checkbox" id="noise_enabled" checked> Noise: <span id="noise"></span>
 </div>
 
-<div id="log" style="white-space: pre; font-family: monospace;"></div>
+<div id="memlog" style="white-space: pre; font-family: monospace;"></div>
+<div id="xlog" style="white-space: pre; font-family: monospace;"></div>
